--- a/index.html
+++ b/index.html
@@ -909,6 +909,10 @@
             📂 Open
           </button>
         </div>
+        <button id="fullscreen-btn" class="fullscreen-btn">
+          <span class="fullscreen-icon">⛶</span>
+          Fullscreen
+        </button>
       </div>
     </div>
     <div class="settings-container">
