--- a/index.html
+++ b/index.html
@@ -944,6 +944,15 @@
         gap: 10px;
         z-index: 1000;
       }
+
+      .quick-folder-columns {
+        display: flex;
+        gap: 20px;
+      }
+
+      .quick-folder-column {
+        flex: 1;
+      }
     </style>
   </head>
   <body>
